--- a/FarmshipIOS/GoogleService-Info.plist
+++ b/FarmshipIOS/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>430632994411-9484mr2lbjvrdeqj62gcsviuokdrdlf6.apps.googleusercontent.com</string>
+	<string>661893884872-0o2d7tkapipfaqde13c4e03pn6u9k06v.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.430632994411-9484mr2lbjvrdeqj62gcsviuokdrdlf6</string>
+	<string>com.googleusercontent.apps.661893884872-0o2d7tkapipfaqde13c4e03pn6u9k06v</string>
 	<key>API_KEY</key>
-	<string>AIzaSyA0ZZ6fDPo4GdT1vDyeIKqDMuXwKs9Ho3k</string>
+	<string>AIzaSyAUO3AFJDh2YoLadu-Lsu8TTS1x7bG-Ixg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>430632994411</string>
+	<string>661893884872</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.robo.ios</string>
+	<string>com.farmship.ios</string>
 	<key>PROJECT_ID</key>
-	<string>robotproject-2d7be</string>
+	<string>chrome-cipher-124607</string>
 	<key>STORAGE_BUCKET</key>
-	<string>robotproject-2d7be.appspot.com</string>
+	<string>chrome-cipher-124607.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:430632994411:ios:fe754f922a117b16</string>
+	<string>1:661893884872:ios:f129156074063994</string>
 	<key>DATABASE_URL</key>
-	<string>https://robotproject-2d7be.firebaseio.com</string>
+	<string>https://chrome-cipher-124607.firebaseio.com</string>
 </dict>
 </plist>
